--- a/rating/rating.html
+++ b/rating/rating.html
@@ -24,15 +24,17 @@
           <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!</p>
         </section>
         
-        <section id="btn">
-        <button type="button">1</button>
-        <button type="button">2</button>
-        <button type="button">3</button>
-        <button type="button">4</button>
-        <button type="button">5</button>
-        <input type="submit" value="Submit">
-        </section>
+        <section>
+          <form action="./thankyou.html" method="get">
+            <button type="button">1</button>
+            <button type="button">2</button>
+            <button type="button">3</button>
+            <button type="button">4</button>
+            <button type="button">5</button>
+            <input type="submit" value="Submit">
+          </form>
       </section>
-    </article>
+    </section>
+  </article>
   </body>
 </html>
