--- a/rating/thankyou.html
+++ b/rating/thankyou.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div id="feed">
-      <section id="container">
+      <section id="thanks>
         <section id="img">
           <img src="./img/illustration-thank-you.svg" alt="Thank You Illustration">
           <p>You selected</p>
