--- a/rating/thankyou.html
+++ b/rating/thankyou.html
@@ -15,9 +15,9 @@
   <body>
     <div id="feed">
       <section id="thanks>
-        <section id="img">
+        <section id="pic">
           <img src="./img/illustration-thank-you.svg" alt="Thank You Illustration">
-          <p>You selected</p>
+          <p>You selected 4 out of 5</p>
         </section>
 
         <section id="remark">
