--- a/rating/rating.html
+++ b/rating/rating.html
@@ -26,12 +26,14 @@
         
         <section>
           <form action="./thankyou.html" method="get">
-            <button type="button">1</button>
-            <button type="button">2</button>
-            <button type="button">3</button>
-            <button type="button">4</button>
-            <button type="button">5</button>
-            <input type="submit" value="Submit">
+            <div id="num">
+              <button type="button">1</button>
+              <button type="button">2</button>
+              <button type="button">3</button>
+              <button type="button">4</button>
+              <button type="button">5</button>
+            </div>
+              <input type="submit" value="Submit">
           </form>
       </section>
     </section>
