--- a/rating/thankyou.html
+++ b/rating/thankyou.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div id="feed">
-      <section id="thanks>
+      <section id="thanks">
         <section id="pic">
           <img src="./img/illustration-thank-you.svg" alt="Thank You Illustration">
           <p>You selected 4 out of 5</p>
