--- a/rating/rating.html
+++ b/rating/rating.html
@@ -33,7 +33,7 @@
               <button type="button">4</button>
               <button type="button">5</button>
             </div>
-              <input type="submit" value="Submit">
+              <input type="submit" value="SUBMIT">
           </form>
       </section>
     </section>
