--- a/rating/rating.html
+++ b/rating/rating.html
@@ -33,10 +33,11 @@
               <button type="button">4</button>
               <button type="button">5</button>
             </div>
-              <input type="submit" value="SUBMIT">
+              <input type="submit" id="submit" value="SUBMIT">
           </form>
+        </section>
       </section>
-    </section>
   </article>
+  <script src="./rating.js"></script>
   </body>
 </html>
