--- a/rating/thankyou.html
+++ b/rating/thankyou.html
@@ -17,7 +17,7 @@
       <section id="thanks">
         <section id="pic">
           <img src="./img/illustration-thank-you.svg" alt="Thank You Illustration">
-          <p>You selected 4 out of 5</p>
+          <p id="display"></p>
         </section>
 
         <section id="remark">
